# multimodal-defect-inspection

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
.claude/: settings.json
configs/: clip_prompts.yaml  label_mapping.yaml  sampling.yaml
corpus/: README.md  engineering_guides.yaml  epa_mold.yaml  hud_housing.yaml  hvac_maintenance.yaml  internachi_sop.yaml
deploy/: Dockerfile.lambda
docs/: case-study.md  datasets.md  exemplar-attribution.md  resume-bullets.md
frontend/: package-lock.json  package.json
infra/: .gitignore  README.md  app.py  cdk.json  requirements.txt
results/: agent_eval.json  audio_auc.json  audio_retrieval.json  clip_zeroshot_baseline.json  corrosion_severity.json  exemplar_retrieval.json  exemplar_spotcheck.md  gate_floor_v2.json  note_sensitivity.json  rag_recall.json  rag_recall_fused.json  thermal_bfdd.json  thermal_bfdd_seeds.json  vlm_topk_full.json  vlm_topk_ood.json  vlm_topk_v1compat.json  vlm_topk_v2.json  vlm_topk_v2_ood.json  walkthrough_eval.json  walkthrough_eval_realistic.json  walkthrough_spotcheck.md  walkthrough_spotcheck_realistic.md
scripts/: build_agent_golden.py  build_audio_bank.py  build_gallery_assets.py  crop_utils.py  derive_gate_floor.py  eval_agent.py  eval_corrosion_severity.py  eval_exemplar_retrieval.py  eval_walkthrough.py  export_clip_onnx.py  export_vector_artifacts.py  fetch_bfdd.sh  fetch_dcase_audio.sh  fetch_exemplars.py  fetch_insulator.sh  fetch_mbdd.sh  fetch_realistic_walkthrough.sh  fetch_vt_corrosion.sh  localization_spike.py  make_thermal_figure.py  normalize_raw.py  package_data.py  package_sagemaker_model.py  prepare_codebrim.py  prepare_insulator.py  prepare_mbdd.py  prepare_vt_corrosion.py  (+4 more)
(+183 files in other folders)
