[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "defectlens"
version = "0.1.0"
description = "Building-defect inspection assistant — dataset pipeline, eval, serving"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "transformers>=5.0",  # v5 APIs assumed: output objects (_features), dtype= kwarg
    "pillow>=10.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
