[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "defectlens"
version = "0.1.0"
description = "Building-defect inspection assistant — dataset pipeline, eval, serving"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",  # required by Qwen2.5-VL AutoProcessor
    "transformers>=5.0",  # v5 APIs assumed: output objects (_features), dtype= kwarg
    "soundfile",
    "scipy",
    "scikit-learn",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "peft>=0.14",
    "mangum>=0.17",  # ASGI -> AWS Lambda adapter (cloud deploy, Phase 5.5)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
